--- a/template/library.bib
+++ b/template/library.bib
@@ -1,34 +1,13 @@
-@article{Aarssen_1997,
-  title = {High {{Productivity}} in {{Grassland Ecosystems}}: {{Effected}} by {{Species Diversity}} or {{Productive Species}}?},
-  shorttitle = {High {{Productivity}} in {{Grassland Ecosystems}}},
-  author = {Aarssen, Lonnie W.},
-  year = {1997},
+@article{Author_2023,
+  title = {The paper: is it or is it not?},
+  shorttitle = {It is normally not.},
+  author = {Author, S and Author2, U and Author3, Z and Author4, J},
+  year = {2023},
   month = oct,
-  journal = {Oikos},
+  journal = {Journal of Magic},
   volume = {80},
   number = {1},
-  eprint = {3546531},
-  eprinttype = {jstor},
-  pages = {183},
-  issn = {00301299},
-  doi = {10.2307/3546531},
-  urldate = {2023-06-06},
-  langid = {english},
-  file = {/Users/emanuel/phd/08-resources/01-literature/Aarssen_1997-High_Productivity_in_Grassland_Ecosystems_-_Effected_by_Species_Diversity_or.pdf}
-}
-
-@article{Barot_etal_2017,
-  title   = {Designing Mixtures of Varieties for Multifunctional Agriculture with the Help of Ecology. {{A}} Review},
-  author  = {Barot, S{\'e}bastien and Allard, Vincent and Cantarel, Am{\'e}lie and Enjalbert, J{\'e}r{\^o}me and Gauffreteau, Arnaud and Goldringer, Isabelle and Lata, Jean-Christophe and Le Roux, Xavier and Niboyet, Audrey and Porcher, Emanuelle},
-  year    = {2017},
-  month   = apr,
-  journal = {Agronomy for Sustainable Development},
-  volume  = {37},
-  number  = {2},
-  pages   = {13},
-  issn    = {1774-0746, 1773-0155},
-  doi     = {10.1007/s13593-017-0418-x},
-  urldate = {2023-06-06},
-  langid  = {english},
-  file    = {/Users/emanuel/phd/08-resources/01-literature/Barot_2017-Designing_mixtures_of_varieties_for_multifunctional_agriculture_with_the_help.pdf}
+  pages = {18},
+  urldate = {2024-10-31},
+  langid = {english}
 }
